force-app/main/default/objects/Contact/fields/checkEmail__c.field-meta.xml
<CustomField>
    <fullName>checkEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the value is checked then the email will be sent to the corresponding Contact</description>
    <label>checkEmail</label>
    <type>Checkbox</type>
</CustomField>