force-app/main/default/objects/Contact/fields/Duplicate_Contact__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Contact__c</fullName>
    <description>Identify the duplicate contacts</description>
    <label>Duplicate Contact</label>
    <length>20</length>
    <type>Text</type>
</CustomField>