force-app/main/default/objects/Contact/fields/setEmail__c.field-meta.xml
<CustomField>
    <fullName>setEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Send Emails to Contacts if the value becomes true</description>
    <label>setEmail</label>
    <type>Checkbox</type>
</CustomField>