force-app/main/default/objects/Contact/validationRules/Duplicate_contact_error.validationRule-meta.xml
<ValidationRule>
    <fullName>Duplicate_contact_error</fullName>
    <active>true</active>
    <description>Throws an error if there is a value populated in this field</description>
    <errorConditionFormula>Duplicate_Contact__c  &lt;&gt;  null</errorConditionFormula>
    <errorMessage>Lead already exists as contact</errorMessage>
</ValidationRule>